--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "nodemon src/index.js",
-        "start": "index.js"
+        "start": "node src/index.js"
     },
     "author": "kha21",
     "license": "ISC",
@@ -18,9 +18,10 @@
         "body-parser": "^2.2.1",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
-        "express": "^5.1.0",
+        "express": "^4.21.2",
         "mongodb": "^7.0.0",
         "mongoose": "^9.0.0",
-        "react-router-dom": "^7.9.6"
+        "react-router-dom": "^7.9.6",
+        "todo-list-app": "file:.."
     }
 }
