--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "npm install --prefix client && npm install --prefix server && npm run build --prefix client ",
-        "start": "npm run start --prefix server"
+        "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend ",
+        "start": "npm run start --prefix backend"
     },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/kharina21/kha21dev_todoX.git"
     },
     "keywords": [],
-    "author": "",
+    "author": "kha21",
     "license": "ISC",
     "bugs": {
         "url": "https://github.com/kharina21/kha21dev_todoX/issues"
