--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "client",
+    "name": "frontend",
     "private": true,
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite --host",
+        "dev": "vite",
         "build": "vite build",
         "lint": "eslint .",
         "preview": "vite preview"
@@ -12,33 +12,32 @@
     "dependencies": {
         "@radix-ui/react-dialog": "^1.1.15",
         "@radix-ui/react-popover": "^1.1.15",
-        "@radix-ui/react-slot": "^1.2.4",
-        "@tailwindcss/vite": "^4.1.17",
-        "axios": "^1.13.2",
+        "@radix-ui/react-slot": "^1.2.3",
+        "@tailwindcss/vite": "^4.1.12",
+        "axios": "^1.11.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
-        "lucide": "^0.555.0",
-        "lucide-react": "^0.555.0",
+        "lucide-react": "^0.540.0",
         "react": "^19.1.1",
-        "react-dom": "^19.2.0",
-        "react-router": "^7.9.6",
+        "react-dom": "^19.1.1",
+        "react-router": "^7.8.1",
         "sonner": "^2.0.7",
-        "tailwind-merge": "^3.4.0",
-        "tailwindcss": "^4.1.17",
+        "tailwind-merge": "^3.3.1",
+        "tailwindcss": "^4.1.12",
         "todo-list-app": "file:.."
     },
     "devDependencies": {
-        "@eslint/js": "^9.39.1",
+        "@eslint/js": "^9.33.0",
         "@types/node": "^24.3.0",
         "@types/react": "^19.1.10",
         "@types/react-dom": "^19.1.7",
         "@vitejs/plugin-react": "^5.0.0",
-        "eslint": "^9.39.1",
-        "eslint-plugin-react-hooks": "^7.0.1",
-        "eslint-plugin-react-refresh": "^0.4.24",
-        "globals": "^16.5.0",
-        "tw-animate-css": "^1.4.0",
-        "vite": "^7.2.4"
+        "eslint": "^9.33.0",
+        "eslint-plugin-react-hooks": "^5.2.0",
+        "eslint-plugin-react-refresh": "^0.4.20",
+        "globals": "^16.3.0",
+        "tw-animate-css": "^1.3.7",
+        "vite": "^7.1.2"
     }
 }
